[package]
name = "RustSDF"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
noise = "0.9.0"
approx = "0.5.1"
nalgebra = "0.33.2"
once_cell = "1.21.3"
chrono = "0.4.41"
ntest_timeout = "0.9.3"
rand_distr = "0.5.1"
plotters = "0.3.7"
piston_window = "0.132.0"
plotters-piston = {version = "0.3.1", path = "plotters-piston"}
assertables = "9.8.1"
flaky_test = "0.2.2"
